# celebrity-tracker

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
src/: config.py  main.py
src/db/: delete.py  fetch.py  insert.py  models.py  update.py
