[project]
name = "celebrity-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyanshu Sharma",email = "sharmapriyanshu1902@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
